[metadata]
name = pyorb
description = Keplerian orbit functions in Python
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = Daniel Kastinen
author_email = daniel.kastinen@irf.se
license = GPL-3.0-or-later
license_files = LICENSE
readme = README.md
homepage = https://github.com/danielk333/pyorb
classifiers = 
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)


[options]
packages = find: 
python_requires = >=3.0
install_requires =
    numpy >= 1.18.4


[options.extras_require]
develop = 
    pytest >= 6.2.5
    sphinx >= 4.2.0
    flake8 >= 4.0.1
    wheel >= 0.37.0
    build >= 0.7.0
    twine >= 3.4.2
    coverage >= 6.0.2
    sphinx-gallery >= 0.3.1
    matplotlib >= 3.5.1
    nbsphinx >= 0.8.8


[flake8]
ignore = D203,E251,E126,E226
max-line-length = 110
exclude = .git,__pycache__,docs/source/conf.py,build,dist,tests,examples